# Dandelion

./: .gitignore  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac
CSharp/DandeClient/: DandeClient.sln
Java/DandeClient/: .project  build.xml
Python/: DandeClient.py  dlclient.py
assets/: DandeClient.glade  Dandelion.glade  Makefile.am  Makefile.in  Notes.raw  screen.fs  screen.vs
assets/icons/: Makefile.am  Makefile.in
dandeclientsrc/: Makefile.am  Makefile.in  dandeclient.c  dlclient.c  dlclient.h
debian/: changelog  control  copyright  dandelion.cron.d.ex  dandelion.default.ex  dandelion.doc-base.EX  dandelion.substvars  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch
linux/: build  buildclient
resources/: DandelionLogo.xml  Notes01.xar  Notes02.xar  cleanglade.py
src/: Makefile.am  Makefile.in  dandelion.c  floatnote.c  floatnote.h  gnetconfig.h  properties.c  properties.h  server.c  server.h  settings.c  settings.h  shader.c  shader.h  spinslider.c  spinslider.h  textures.c  textures.h  utils.c  utils.h  vis.c  vis.h
windows/: build.bat  buildSetup.bat  buildclient.bat  dandelion.wxs
windows/BootStrap/: bootstrap.wxs
windows/wixui/: BrowseDlg.wxs  CancelDlg.wxs  Common.wxs  DiskCostDlg.wxs  ErrorDlg.wxs  ErrorProgressText.wxs  ExitDialog.wxs  FatalError.wxs  FilesInUse.wxs  InstallDirDlg.wxs  MaintenanceTypeDlg.wxs  MaintenanceWelcomeDlg.wxs  MsiRMFilesInUse.wxs  OutOfDiskDlg.wxs  OutOfRbDiskDlg.wxs  PrepareDlg.wxs  ProgressDlg.wxs  ResumeDlg.wxs  ShortcutDlg.wxs  UserExit.wxs  VerifyReadyDlg.wxs  WaitForCostingDlg.wxs  WelcomeDlg.wxs  WixUI_en-us.wxl
(+17 files in other folders)
