bin_PROGRAMS = ../dandelion
___dandelion_SOURCES = dandelion.c properties.c properties.h settings.c settings.h textures.c textures.h vis.c vis.h floatnote.c floatnote.h server.c server.h utils.c utils.h shader.c shader.h spinslider.c spinslider.h

___dandelion_LDADD = -lm @DANDELION_LIBS@

___dandelion_CPPFLAGS = -DDANDEDIR=\"$(datadir)/@PACKAGE@\" -Wall @DANDELION_CFLAGS@

#dist_pkgdata_DATA = ../assets/Dandelion.glade

